pgsql.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
  labels:
    app: pgsql-server
spec:
  ports:
    - port: 5432
  selector:
    app: pgsql-server
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pgsql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgsql-server
    spec:
      containers:
        - name: pgsql-server
          image: bitnami/postgresql:latest
          ports:
          - containerPort: 5432
          volumeMounts:
            - name: pgsql-storage
              mountPath: /bitnami
      volumes:
      - name: pgsql-storage
        persistentVolumeClaim:
          claimName: pgsql-pv-claim
